[tool.poetry]
name = "service-template"
version = "0.1.0"
description = "Template for backend services"
authors = ["Quinn Weber <quinn@quinnweber.com>"]
readme = "README.md"
packages = [
    { include = "service_template", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.75"
flask = "^2.2.3"
jsonschema = "^4.17.3"
raven = {extras = ["flask"], version = "^6.10.0"}
zappa = "^0.56.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
lxml = "^4.9.2"
ipython = "^8.10.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
python-coveralls = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
